--- a/EasyGo_Main/src/main/res/values/strings.xml
+++ b/EasyGo_Main/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QuickDevelopFrame</string>
+    <string name="open_string">open</string>
+    <string name="close_string">close</string>
 </resources>
